@@ -342,6 +342,7 @@ table.budget.location td.loc_des			{font-size:12px;}
 table.budget.location th.loc_pos,
 table.budget.location td.loc_pos			{padding-right:40px; width:110px;}
 table.budget.location td.loc_pos			{font-family:monospace; font-size:12px;}
+table.budget.location td.loc_pos a span		{display:block;}
 table.budget.location th.loc_class,
 table.budget.location td.loc_class,
 table.budget.location th.loc_reach,
