@@ -4,6 +4,8 @@ Updated recepient-country layout for document-links
 Display all links in new tab for new SAVi
 Update vocab geonames link for location-id
 Add hover titles for location sub-elements
+Display point/pos as separate @lat/@long
+Add url to Google maps for point/pos
 
 
 Development Portal (2020-06-01 shi)
